src/test/ui/async-await/in-trait/async-associated-types2-desugared.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/async-associated-types2-desugared.rs:13:38
   |
LL |     async fn foo(&self) -> Self::Fut<'a>;
   |                                      ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL |     async fn foo<'a>(&self) -> Self::Fut<'a>;
   |                 ++++
help: consider introducing lifetime `'a` here
   |
LL | trait MyTrait<'a> {
   |              ++++

error[E0658]: `impl Trait` in type aliases is unstable
  --> $DIR/async-associated-types2-desugared.rs:19:20
   |
LL |     type Fut<'a> = impl Future + 'a
   |                    ^^^^^^^^^^^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error[E0310]: the parameter type `Self` may not live long enough
  --> $DIR/async-associated-types2-desugared.rs:13:28
   |
LL |     async fn foo(&self) -> Self::Fut<'a>;
   |                            ^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `Self: 'static`...
   = note: ...so that the type `Self` will meet its required lifetime bounds...
note: ...that is required by this bound
  --> $DIR/async-associated-types2-desugared.rs:11:15
   |
LL |         Self: 'a;
   |               ^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0261, E0310, E0658.
For more information about an error, try `rustc --explain E0261`.
